[package]
name = "mpssh-rstp"
version = "0.1.0"
authors = ["Teodor Milkov <tm@lifepattern.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "*"
tracing-subscriber = { version = "0.3", default-features = true, features = ["env-filter"] }
ssh2 = "0.9"
threadpool = "1.8"
clap = "2.33"
libc = "0.2"
log = "*"
nix = "0.19"
prctl = "1.0"
users = "0.11"
ansi_term = "0.12"
atty = "0.2"
russh = "0.49.1"
russh-keys = "0.49.1"
tokio = "1.42.0"
async-trait = "0.1.83"
anyhow = "1.0.94"
byteorder = "1.5.0"
